响应式样式

--- a/BootStrap.Test/BootStrap.Test/html/2/6Alert.html
+++ b/BootStrap.Test/BootStrap.Test/html/2/6Alert.html
@@ -48,5 +48,31 @@
         <div id="dropdown3" class="tab-pane fade"><p>单击“JavaScript启示录”时显示该区域</p></div>
         <div id="dropdown4" class="tab-pane fade"><p>深入理解Bootstrap</p></div>
     </div>
+
+    <abbr title="JavaScript设计模式是一本专门讲解设计模式的专业书籍">JavaScript设计模式</abbr>
+    <abbr title="HyperText Markup Language" class="initialism">Html</abbr>
+    <abbr data-original-title="avaScript设计模式是一本专门讲解设计模式的专业书籍">JavaScript设计模式</abbr>
+    
+    <address>
+        <strong>Twitter,Inc.</strong><br/>
+        795 Folsom Ave,Suite 600<br/>
+        San Francisco,CA 94107<br/>
+        <abbr title="Phone">P:</abbr>
+        (123)456-7890
+    </address>
+    <address>
+        <strong>汤姆大叔</strong>
+        <a href="mailto:#">tomxu@outlook.com</a>
+    </address>
+
+    <blockquote>
+        <p>不愤不启，不悱不发。举一隅，不以三隅反，则吾不复也。</p>
+        <small>出自<cite title="论语•述而">论语</cite></small>
+    </blockquote>
+
+    <blockquote class="pull-right">
+        <p>不愤不启，不悱不发。举一隅，不以三隅反，则吾不复也。</p>
+        <small>出自<cite title="论语•述而">论语</cite></small>
+    </blockquote>
 </body>
 </html>
